refactor: improve ESLint configuration, remove unused code, and document prerendering constraints
Update ESLint config to modern flat format with explicit plugin rules instead of extends. Add ignores for dist, service worker, and generated types. Remove unused recommendations route redirect. Add ESLint disable comment for toggle component variant exports. Fix useJSONResumeAdapter dependencies by memoizing resumeDataMap and removing unused translation hooks. Initialize useScrollDirection lastActivity state with

--- a/.pitfalls.md
+++ b/.pitfalls.md
@@ -184,3 +184,31 @@ Documented issues and their solutions to prevent recurring mistakes.
 - `src/components/profile/SkillsSection.tsx` - Lines 32-50
 
 **Key Learning:** For preview sections, expand all items by default to showcase content immediately.
+
+---
+
+## 9. Manual Code Chunking Incompatible with Prerendering
+
+**Problem:** Attempting to optimize bundle size by splitting vendor libraries into separate chunks causes build to fail with `TypeError: Cannot read properties of undefined (reading 'createContext')`.
+
+**Root Cause:** The `vite-prerender-plugin` renders pages during build using Node.js SSR. When `manualChunks` splits React/ReactDOM into separate bundles, those modules aren't available during the SSR phase, causing `createContext` and other React APIs to be undefined.
+
+**Solution:**
+
+Keep `manualChunks: undefined` in `vite.config.ts`:
+
+```typescript
+build: {
+  rollupOptions: {
+    output: {
+      manualChunks: undefined, // Required for prerendering
+    },
+  },
+}
+```
+
+**Files Involved:**
+
+- `vite.config.ts` - Build configuration
+
+**Key Learning:** Prerendered apps (SSR) require all code to be synchronously available during build. Code splitting with dynamic imports (`React.lazy`) and vendor chunking both break prerendering. The 821KB bundle size is expected and correct for this architecture.
